--- a/integration/volley/build.gradle
+++ b/integration/volley/build.gradle
@@ -12,6 +12,9 @@ dependencies {
     testImplementation "org.mockito:mockito-core:${MOCKITO_VERSION}"
     testImplementation "org.robolectric:robolectric:${ROBOLECTRIC_VERSION}"
     testImplementation "com.squareup.okhttp3:mockwebserver:${MOCKWEBSERVER_VERSION}"
+    testImplementation "androidx.test:core:${ANDROIDX_TEST_VERSION}"
+    testImplementation "androidx.test.ext:junit:${ANDROIDX_TEST_JUNIT_VERSION}"
+    testImplementation "androidx.test:runner:${ANDROIDX_TEST_VERSION}"
 }
 
 android {
